--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
   "language": "language",
   "home_page": "home page",
   "about_us": "About us",
+  "welcome_at": "Welcome at ecogourmet",
   "page": "page",
   "login": "login",
   "logout": "logout",
