--- a/lang/hu.json
+++ b/lang/hu.json
@@ -6,6 +6,7 @@
   "home_page": "kezdőlap",
   "about_us": "rólunk",
   "page": "oldal",
+  "welcome_at": "Üdvözöljük az EcoGourmetnél!",
   "login": "bejelentkezés",
   "logout": "kijelentkezés",
   "register": "regisztráció",
