--- a/lang/de.json
+++ b/lang/de.json
@@ -47,5 +47,6 @@
   "forgot_password": "du hast dein passwort vergessen",
   "change_email": "Email adresse ändern",
   "change_password": "kennwort ändern",
-  "under_construction": "bauarbeiten im gange"
+  "under_construction": "bauarbeiten im gange",
+  "about": "xxxxxxxxxxxxxxxxxxxxxxx"
 }
