--- a/lang/en.json
+++ b/lang/en.json
@@ -48,6 +48,6 @@
   "forgot_password": "forgot your password",
   "change_email": "change email address",
   "change_password": "change password",
-  "under_construction": "under construction"
-  
+  "under_construction": "under construction",
+  "about": "about"
 }
