debug - throwing away the trash codes inside

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -48,5 +48,14 @@
   "forgot_password": "elfelejtette a jelszavát",
   "change_email": "email cím megváltoztatása",
   "change_password": "jelszó módosítása",
-  "under_construction": "fejlesztés alatt"
+  "under_construction": "fejlesztés alatt",
+  "about": "rólunk",
+  "slide_title_1": "Tudtad, hogy az EcoGourmet segíthet a bolygónk megóvásában?",
+  "slide_content_1": "Az EcoGourmet olyan ételélményeket kínál, amelyek segítenek csökkenteni az ökológiai lábnyomodat. Ízletes és fenntartható ételek, amelyek segítenek megóvni a környezetet.",
+  "slide_title_2": "Fedezd fel az EcoGourmet világát: Ízletes, Fenntartható, Egészséges!",
+  "slide_content_2": "Az EcoGourmet egy olyan cég, amely az ízletes ételek mellett a fenntarthatóságot és az egészséget helyezi előtérbe. Ismerd meg az ételeinket, amelyek egyesítik az élvezetet és az egészséget!",
+  "slide_title_3": "Az EcoGourmet: Az étkezés, ami jó a testednek és a Földnek is!",
+  "slide_content_3": "Az EcoGourmet olyan éttermi élményeket kínál, ahol az ételek nemcsak finomak, hanem fenntarthatóak is. Támogasd egészségedet és a környezetvédelmet az EcoGourmet segítségével.",
+  "slide_title_4": "Nem kell tovább a konyhában gondolkodnia!",
+  "slide_content_4": "Az EcoGourmet egészséges menükkel rukkol elő, hogy segítsen megkönnyíteni az étkezési döntéseit. Egyszerűen válasszon akár napi 3 mnenü közül!"
 }
