shop changes - about changes

--- a/lang/en.json
+++ b/lang/en.json
@@ -49,5 +49,14 @@
   "change_email": "change email address",
   "change_password": "change password",
   "under_construction": "under construction",
-  "about": "about"
+  "about": "about",
+  "slide_title_1": "Did you know that EcoGourmet can help preserve our planet?",
+  "slide_content_1": "EcoGourmet offers food experiences that help reduce your ecological footprint. Delicious and sustainable foods that contribute to environmental conservation.",
+  "slide_title_2": "Explore the World of EcoGourmet: Delicious, Sustainable, Healthy!",
+  "slide_content_2": "EcoGourmet is a company that prioritizes delicious food alongside sustainability and health. Discover our meals that combine pleasure and well-being!",
+  "slide_title_3": "EcoGourmet: Eating Well for Your Body and the Earth!",
+  "slide_content_3": "EcoGourmet offers dining experiences where the food is not only delicious but also sustainable. Support your health and environmental conservation with EcoGourmet.",
+  "slide_title_4": "No need to think about the kitchen anymore!",
+  "slide_content_4": "EcoGourmet presents healthy menus to make your dining decisions easier. Simply choose from up to 3 daily menus!"
+
 }
