--- a/lang/de.json
+++ b/lang/de.json
@@ -48,5 +48,14 @@
   "change_email": "Email adresse ändern",
   "change_password": "kennwort ändern",
   "under_construction": "bauarbeiten im gange",
-  "about": "xxxxxxxxxxxxxxxxxxxxxxx"
+  "about": "xxxxxxxxxxxxxxxxxxxxxxx",
+  "slide_title_1": "Wusstest du, dass EcoGourmet dazu beitragen kann, unseren Planeten zu schützen?",
+  "slide_content_1": "EcoGourmet bietet kulinarische Erlebnisse, die dazu beitragen, deinen ökologischen Fußabdruck zu reduzieren. Köstliche und nachhaltige Lebensmittel, die dazu beitragen, die Umwelt zu schützen.",
+  "slide_title_2": "Entdecke die Welt von EcoGourmet: Lecker, Nachhaltig, Gesund!",
+  "slide_content_2": "EcoGourmet ist ein Unternehmen, das köstliches Essen neben Nachhaltigkeit und Gesundheit in den Vordergrund stellt. Entdecke unsere Gerichte, die Genuss und Wohlbefinden vereinen!",
+  "slide_title_3": "EcoGourmet: Essen, das gut für deinen Körper und die Erde ist!",
+  "slide_content_3": "EcoGourmet bietet gastronomische Erlebnisse, bei denen die Speisen nicht nur köstlich, sondern auch nachhaltig sind. Unterstütze deine Gesundheit und den Umweltschutz mit EcoGourmet.",
+  "slide_title_4": "Du musst nicht mehr über die Küche nachdenken!",
+  "slide_content_4": "EcoGourmet präsentiert gesunde Menüs, um deine Essensentscheidungen zu erleichtern. Wähle einfach aus bis zu 3 täglichen Menüs!"
+
 }
