--- a/lang/de.json
+++ b/lang/de.json
@@ -56,6 +56,6 @@
   "slide_title_3": "EcoGourmet: Essen, das gut für deinen Körper und die Erde ist!",
   "slide_content_3": "EcoGourmet bietet gastronomische Erlebnisse, bei denen die Speisen nicht nur köstlich, sondern auch nachhaltig sind. Unterstütze deine Gesundheit und den Umweltschutz mit EcoGourmet.",
   "slide_title_4": "Du musst nicht mehr über die Küche nachdenken!",
-  "slide_content_4": "EcoGourmet präsentiert gesunde Menüs, um deine Essensentscheidungen zu erleichtern. Wähle einfach aus bis zu 3 täglichen Menüs!"
-
+  "slide_content_4": "EcoGourmet präsentiert gesunde Menüs, um deine Essensentscheidungen zu erleichtern. Wähle einfach aus bis zu 3 täglichen Menüs!",
+  "services":"services"
 }
