--- a/lang/en.json
+++ b/lang/en.json
@@ -57,6 +57,7 @@
   "slide_title_3": "EcoGourmet: Eating Well for Your Body and the Earth!",
   "slide_content_3": "EcoGourmet offers dining experiences where the food is not only delicious but also sustainable. Support your health and environmental conservation with EcoGourmet.",
   "slide_title_4": "No need to think about the kitchen anymore!",
-  "slide_content_4": "EcoGourmet presents healthy menus to make your dining decisions easier. Simply choose from up to 3 daily menus!"
+  "slide_content_4": "EcoGourmet presents healthy menus to make your dining decisions easier. Simply choose from up to 3 daily menus!",
+  "services":"services"
 
 }
