Products page skeleton - About us page top button

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -58,6 +58,15 @@
   "slide_content_3": "Az EcoGourmet olyan éttermi élményeket kínál, ahol az ételek nemcsak finomak, hanem fenntarthatóak is. Támogasd egészségedet és a környezetvédelmet az EcoGourmet segítségével.",
   "slide_title_4": "Nem kell tovább a konyhában gondolkodnia!",
   "slide_content_4": "Az EcoGourmet egészséges menükkel rukkol elő, hogy segítsen megkönnyíteni az étkezési döntéseit. Egyszerűen válasszon akár napi 3 mnenü közül!",
-  "services":"Szolgáltatások"
-
+  "services":"Szolgáltatások",
+  "shop_card_1":" Az Ecogourmet a fenntartható és környezetbarát élelmiszerek széles választékát kínálja. Minden termékünk környezetbarát csomagolásban érkezik, és hozzájárul a fenntartható életmód támogatásához.",
+  "shop_card_2":"Az Ecogourmet elkötelezett a vásárlói elégedettség iránt, és gyors, megbízható kiszállítást biztosít. Rendeléseiket gyorsan és precízen szállítjuk ki, hogy az ügyfeleink minél hamarabb élvezhessék a friss és minőségi termékeket.",
+  "shop_card_3":"Az Ecogourmet rendszeresen kínál exkluzív akciókat és kedvezményeket vásárlóinknak. Az ügyfeleink számára elérhető rendszeres promóciók segítenek abban, hogy még vonzóbbá tegyük a vásárlást, és előnyösebbé tegyük az Ecogourmet melletti döntést.",
+  "shop_card_4":"Minden termékünkre a legmagasabb minőségi szabványok vonatkoznak. Az Ecogourmet garantálja a termékek frissességét és minőségét, így biztos lehetsz benne, hogy minden vásárlásnál csak a legjobbat kapod.",
+  "shop_card_title_1":"Környezetbarát Termékek",
+  "shop_card_title_2":"Gyors és Precíz Kiszállítás",
+  "shop_card_title_3":"Exkluzív Akciók és Kedvezmények",
+  "shop_card_title_4":"Garantált Frissesség",
+  "ecogourmet_features_title":"Miért érdemes minket választani?"
+  
 }
