--- a/lang/de.json
+++ b/lang/de.json
@@ -57,5 +57,14 @@
   "slide_content_3": "EcoGourmet bietet gastronomische Erlebnisse, bei denen die Speisen nicht nur köstlich, sondern auch nachhaltig sind. Unterstütze deine Gesundheit und den Umweltschutz mit EcoGourmet.",
   "slide_title_4": "Du musst nicht mehr über die Küche nachdenken!",
   "slide_content_4": "EcoGourmet präsentiert gesunde Menüs, um deine Essensentscheidungen zu erleichtern. Wähle einfach aus bis zu 3 täglichen Menüs!",
-  "services":"services"
+  "services":"services",
+  "shop_card_1":"Ecogourmet bietet eine breite Palette nachhaltiger und umweltfreundlicher Lebensmittelprodukte. Jedes unserer Produkte wird in umweltfreundlicher Verpackung geliefert und trägt dazu bei, einen nachhaltigen Lebensstil zu unterstützen.",
+  "shop_card_2":"Ecogourmet verpflichtet sich zur Kundenzufriedenheit und bietet schnelle, zuverlässige Lieferdienste. Wir liefern Ihre Bestellungen schnell und präzise aus, damit unsere Kunden die frischen und hochwertigen Produkte so schnell wie möglich genießen können.",
+  "shop_card_3":"Ecogourmet bietet regelmäßig exklusive Aktionen und Rabatte für unsere Kunden an. Diese laufenden Sonderangebote sollen den Einkauf noch ansprechender gestalten und die Entscheidung für Ecogourmet vorteilhafter machen.",
+  "shop_card_4":"Alle unsere Produkte entsprechen den höchsten Qualitätsstandards. Ecogourmet garantiert die Frische und Qualität unserer Produkte, sodass Sie bei jedem Kauf nur das Beste erhalten.",
+  "shop_card_title_1":"Umweltfreundliche Produkte",
+  "shop_card_title_2":"Schnelle und präzise Lieferung",
+  "shop_card_title_3":"Exklusive Aktionen und Rabatte",
+  "shop_card_title_4":"Garantierte Frische",
+  "ecogourmet_features_title": "Warum sollten Sie uns wählen?"
 }
