--- a/lang/en.json
+++ b/lang/en.json
@@ -58,6 +58,16 @@
   "slide_content_3": "EcoGourmet offers dining experiences where the food is not only delicious but also sustainable. Support your health and environmental conservation with EcoGourmet.",
   "slide_title_4": "No need to think about the kitchen anymore!",
   "slide_content_4": "EcoGourmet presents healthy menus to make your dining decisions easier. Simply choose from up to 3 daily menus!",
-  "services":"services"
+  "services":"services",
+  "shop_card_1":"Ecogourmet offers a wide range of sustainable and environmentally friendly food products. Each of our products arrives in eco-friendly packaging, contributing to the support of a sustainable lifestyle.",
+  "shop_card_2":"Ecogourmet is committed to customer satisfaction, providing fast and reliable delivery services. We dispatch your orders quickly and precisely, ensuring our customers can enjoy fresh and high-quality products as soon as possible.",
+  "shop_card_3":"Ecogourmet regularly presents exclusive promotions and discounts to our customers. These ongoing promotions are designed to make shopping even more appealing and to make choosing Ecogourmet more advantageous.",
+  "shop_card_4":"All our products adhere to the highest quality standards. Ecogourmet guarantees the freshness and quality of our products, ensuring that with every purchase, you receive only the best.",
+  "shop_card_title_1":"Environmentally Friendly Products",
+  "shop_card_title_2":"Fast and Precise Delivery",
+  "shop_card_title_3":"Exclusive Promotions and Discounts",
+  "shop_card_title_4":"Guaranteed Freshness",
+  "ecogourmet_features_title":"Why should you choose us?"
+
 
 }
