Landing changes to text

--- a/lang/de.json
+++ b/lang/de.json
@@ -66,5 +66,7 @@
   "shop_card_title_2":"Schnelle und präzise Lieferung",
   "shop_card_title_3":"Exklusive Aktionen und Rabatte",
   "shop_card_title_4":"Garantierte Frische",
-  "ecogourmet_features_title": "Warum sollten Sie uns wählen?"
+  "ecogourmet_features_title": "Warum sollten Sie uns wählen?",
+  "DISCOVER_MORE": "Mehr entdecken"
+
 }
