--- a/lang/en.json
+++ b/lang/en.json
@@ -67,7 +67,9 @@
   "shop_card_title_2":"Fast and Precise Delivery",
   "shop_card_title_3":"Exclusive Promotions and Discounts",
   "shop_card_title_4":"Guaranteed Freshness",
-  "ecogourmet_features_title":"Why should you choose us?"
+  "ecogourmet_features_title":"Why should you choose us?",
+  "DISCOVER_MORE": "Discover More"
+
 
 
 }
