--- a/lang/hu.json
+++ b/lang/hu.json
@@ -67,6 +67,8 @@
   "shop_card_title_2":"Gyors és Precíz Kiszállítás",
   "shop_card_title_3":"Exkluzív Akciók és Kedvezmények",
   "shop_card_title_4":"Garantált Frissesség",
-  "ecogourmet_features_title":"Miért érdemes minket választani?"
+  "ecogourmet_features_title":"Miért érdemes minket választani?",
+  "DISCOVER_MORE": "További információk"
+
   
 }
