cart in progress

--- a/lang/en.json
+++ b/lang/en.json
@@ -49,7 +49,7 @@
   "change_email": "change email address",
   "change_password": "change password",
   "under_construction": "under construction",
-  "about": "about",
+  "about": "About us",
   "slide_title_1": "Did you know that EcoGourmet can help preserve our planet?",
   "slide_content_1": "EcoGourmet offers food experiences that help reduce your ecological footprint. Delicious and sustainable foods that contribute to environmental conservation.",
   "slide_title_2": "Explore the World of EcoGourmet: Delicious, Sustainable, Healthy!",
