--- a/lang/hu.json
+++ b/lang/hu.json
@@ -57,7 +57,7 @@
   "slide_title_3": "Az EcoGourmet: Az étkezés, ami jó a testednek és a Földnek is!",
   "slide_content_3": "Az EcoGourmet olyan éttermi élményeket kínál, ahol az ételek nemcsak finomak, hanem fenntarthatóak is. Támogasd egészségedet és a környezetvédelmet az EcoGourmet segítségével.",
   "slide_title_4": "Nem kell tovább a konyhában gondolkodnia!",
-  "slide_content_4": "Az EcoGourmet egészséges menükkel rukkol elő, hogy segítsen megkönnyíteni az étkezési döntéseit. Egyszerűen válasszon akár napi 3 mnenü közül!",
+  "slide_content_4": "Az EcoGourmet egészséges menükkel rukkol elő, hogy segítsen megkönnyíteni az étkezési döntéseit. Egyszerűen válasszon akár napi 3 menü közül!",
   "services":"Szolgáltatások",
   "shop_card_1":" Az Ecogourmet a fenntartható és környezetbarát élelmiszerek széles választékát kínálja. Minden termékünk környezetbarát csomagolásban érkezik, és hozzájárul a fenntartható életmód támogatásához.",
   "shop_card_2":"Az Ecogourmet elkötelezett a vásárlói elégedettség iránt, és gyors, megbízható kiszállítást biztosít. Rendeléseiket gyorsan és precízen szállítjuk ki, hogy az ügyfeleink minél hamarabb élvezhessék a friss és minőségi termékeket.",
