subscription plans changes

--- a/lang/de.json
+++ b/lang/de.json
@@ -63,6 +63,8 @@
   "shop_card_title_3":"Exklusive Aktionen und Rabatte",
   "shop_card_title_4":"Garantierte Frische",
   "ecogourmet_features_title": "Warum sollten Sie uns wählen?",
-  "DISCOVER_MORE": "Mehr entdecken"
+  "DISCOVER_MORE": "Mehr entdecken",
+  "Cart": "In den Warenkorb legen"
+
 
 }
