--- a/lang/en.json
+++ b/lang/en.json
@@ -65,8 +65,8 @@
   "shop_card_title_3":"Exclusive Promotions and Discounts",
   "shop_card_title_4":"Guaranteed Freshness",
   "ecogourmet_features_title":"Why should you choose us?",
-  "DISCOVER_MORE": "Discover More"
-
+  "DISCOVER_MORE": "Discover More",
+  "Cart": "Add to cart"
 
 
 }
