--- a/lang/hu.json
+++ b/lang/hu.json
@@ -65,7 +65,9 @@
   "shop_card_title_3":"Exkluzív Akciók és Kedvezmények",
   "shop_card_title_4":"Garantált Frissesség",
   "ecogourmet_features_title":"Miért érdemes minket választani?",
-  "DISCOVER_MORE": "További információk"
+  "DISCOVER_MORE": "További információk",
+  "Cart": "Kosárba"
+
 
   
 }
