--- a/lang/de.json
+++ b/lang/de.json
@@ -64,7 +64,15 @@
   "shop_card_title_4":"Garantierte Frische",
   "ecogourmet_features_title": "Warum sollten Sie uns wählen?",
   "DISCOVER_MORE": "Mehr entdecken",
-  "Cart": "In den Warenkorb legen"
+  "Cart": "In den Warenkorb legen",
+  "about_title_1": "Grüne Diäten...",
+  "about_text_1": "Diäten betonen nicht nur die Gesundheit, sondern auch den Genuss von leckeren Speisen und ermöglichen es den Kunden, die Vorteile gesunder Ernährung zu erleben. EcoGourmet glaubt daran, dass ein gesunder Lebensstil und Nachhaltigkeit kompatible Ziele sind, die jedem Kunden zugänglich gemacht werden können. Ihre Aktivitäten bringen das persönliche Wohlbefinden mit der Umweltverantwortung in Einklang und tragen dazu bei, eine nachhaltige Zukunft zu gestalten. EcoGourmet setzt ein ideales Beispiel für Ernährungsberatung, das Gemeinschaft und Umweltverantwortung miteinander verbindet.",
+  "about_title_2": "Warum Eco?",
+  "about_text_2": "Mit dem Engagement, nach jedem Kauf einen Baum zu pflanzen, trägt das Unternehmen zum Umweltschutz und zum globalen Kampf gegen den Klimawandel bei. Im Bereich der Ernährungsberatung berücksichtigt EcoGourmet individuelle Bedürfnisse und Ziele und optimiert jede Ernährung für das ideale Körpergewicht. Die Mitarbeiter des Unternehmens arbeiten mit hoher Expertise und Hingabe mit den Kunden zusammen, um ihnen auf dem Weg zu gesunder Ernährung zu helfen.",
+  "about_title_3": "Gemeinsam erreichen wir!",
+  "about_text_3": "EcoGourmet ist ein außergewöhnliches Unternehmen, das sich einem gesunden Lebensstil und dem Umweltschutz verschrieben hat. Ihre Geschäftsphilosophie vereint Ökologie und Gastronomie, um ihren Kunden Anleitung zum optimalen Körpergewicht zu bieten und dabei nachhaltig auf die Umwelt zu achten.",
+  "plans": "*Nach der Anmeldung erhalten Sie täglich zahlreiche gesunde Rezepte für jede Mahlzeit, damit Sie leicht Entscheidungen treffen und vielfältig essen können, ohne Ihre Gesundheit zu beeinträchtigen.",
+  "news": "Neueste Nachrichten"
 
 
 }
