--- a/lang/en.json
+++ b/lang/en.json
@@ -66,7 +66,13 @@
   "shop_card_title_4":"Guaranteed Freshness",
   "ecogourmet_features_title":"Why should you choose us?",
   "DISCOVER_MORE": "Discover More",
-  "Cart": "Add to cart"
-
-
+  "Cart": "Add to cart",
+  "about_title_1": "Green Diets...",
+  "about_text_1": "Diets emphasize not only health but also the enjoyment of tasty foods, allowing customers to experience the benefits of healthy eating. EcoGourmet believes that a healthy lifestyle and sustainability are compatible goals, making them accessible to every customer. Their activities align personal well-being with environmental responsibility, contributing to shaping a sustainable future. EcoGourmet sets an ideal example of nutritional guidance, combining community and environmental responsibility.",
+  "about_title_2": "Why Eco?",
+  "about_text_2": "With a commitment to planting a tree after every purchase, the company contributes to environmental protection and the global fight against climate change. In the field of nutritional counseling, EcoGourmet considers individual needs and goals, optimizing every diet for the ideal body weight. The company's staff works with high-level expertise and dedication to assist customers on the path to healthy eating.",
+  "about_title_3": "Achieve Together!",
+  "about_text_3": "EcoGourmet is an exceptional venture dedicated to a healthy lifestyle and environmental protection. Their business philosophy combines ecology and gastronomy to provide guidance to their customers toward optimal body weight while caring for the environment sustainably.",
+  "plans": "*After subscribing, you will receive numerous healthy recipes daily for every meal, allowing you to make decisions effortlessly and eat variably without compromising your health.",
+  "news": "Latest News"
 }
