--- a/lang/de.json
+++ b/lang/de.json
@@ -44,7 +44,7 @@
   "change_email": "Email adresse ändern",
   "change_password": "kennwort ändern",
   "under_construction": "bauarbeiten im gange",
-  "about": "xxxxxxxxxxxxxxxxxxxxxxx",
+  "about": "Über uns",
   "slide_title_1": "Wusstest du, dass EcoGourmet dazu beitragen kann, unseren Planeten zu schützen?",
   "slide_content_1": "EcoGourmet bietet kulinarische Erlebnisse, die dazu beitragen, deinen ökologischen Fußabdruck zu reduzieren. Köstliche und nachhaltige Lebensmittel, die dazu beitragen, die Umwelt zu schützen.",
   "slide_title_2": "Entdecke die Welt von EcoGourmet: Lecker, Nachhaltig, Gesund!",
@@ -72,7 +72,31 @@
   "about_title_3": "Gemeinsam erreichen wir!",
   "about_text_3": "EcoGourmet ist ein außergewöhnliches Unternehmen, das sich einem gesunden Lebensstil und dem Umweltschutz verschrieben hat. Ihre Geschäftsphilosophie vereint Ökologie und Gastronomie, um ihren Kunden Anleitung zum optimalen Körpergewicht zu bieten und dabei nachhaltig auf die Umwelt zu achten.",
   "plans": "*Nach der Anmeldung erhalten Sie täglich zahlreiche gesunde Rezepte für jede Mahlzeit, damit Sie leicht Entscheidungen treffen und vielfältig essen können, ohne Ihre Gesundheit zu beeinträchtigen.",
-  "news": "Neueste Nachrichten"
-
+  "news": "Neueste Nachrichten",
+  "plan_desc_1": "Der Simple-Plan ermöglicht die optionale Bestellung von Frühstück, Mittagessen oder Abendessen. Ideal für kürzere, anspruchsvollere Erlebnisse für dich!",
+  "plan_desc_2": "Der Pro-Plan bietet zwei wählbare Mahlzeiten in Form von Frühstück, Mittagessen oder Abendessen. Aufgrund der längeren Laufzeit ist er ideal für Liebhaber von Lebensmittelabonnements.",
+  "plan_desc_3": "Der Enterprise-Plan steht im Zeichen von Luxus und Vielfalt. Er bietet täglich drei Mahlzeiten in Form von Frühstück, Mittagessen und Abendessen.",
+  "abut_pricing_title": "Festgelegte Optionen für den Zugriff auf Inhalte",
+  "award_title_1": "Nachhaltigkeitsgastronomie-Preis",
+  "award_title_2": "Anerkennung für Grüne Küche",
+  "award_title_3": "Umweltheld von EcoGourmet",
+  "award_title_4": "Bio-Restaurant-Zertifizierung",
+  "award_title_5": "Nachhaltiger gastronomischer Innovationspreis",
+  "award_text_1": "Das EcoGourmet-Restaurant hat den Preis für nachhaltige Gastronomie für seine umweltfreundlichen Praktiken gewonnen.",
+  "award_text_2": "Die Organisation Green Kitchen hat die Küche von EcoGourmet für die Verwendung nachhaltiger Zutaten und Prozesse ausgezeichnet.",
+  "award_text_3": "Das EcoGourmet-Team wird für ihre Umweltbemühungen und positiven Auswirkungen auf die Umwelt anerkannt.",
+  "award_text_4": "Das Restaurant von EcoGourmet hat die Bio-Restaurant-Zertifizierung für die Verwendung von Bio-Zutaten erhalten.",
+  "award_text_5": "EcoGourmet wurde für ihre neuen, nachhaltigen gastronomischen Lösungen mit dem Innovationspreis ausgezeichnet.",
+  "testimonial_desc_1": "Mit Hilfe von EcoGourmet habe ich es geschafft, das perfekte Gleichgewicht zwischen einem gesunden Lebensstil und köstlichem Essen zu finden. Die personalisierten Ratschläge und Diäten haben geholfen, meine Essgewohnheiten zu verbessern, und jetzt fühle ich mich besser.",
+  "testimonial_desc_2": "Ich bin sehr dankbar für die Dienstleistungen von EcoGourmet. Ich habe von ihnen qualitativ hochwertige Diäten erhalten, die ihre umweltfreundliche Herangehensweise widerspiegeln. Für mich ist dieses Unternehmen gleichbedeutend mit bewusster und gesunder Ernährung.",
+  "testimonial_desc_3": "Ihre Diät und ihre umweltbewusste Denkweise sind wirklich besonders. Ich bin äußerst zufrieden mit der Zeit, die ich mit ihnen verbracht habe, und ich empfehle sie jedem, der gesundes Essen besser verstehen möchte.",
+  "testimonial_desc_4": "EcoGourmet ist für mich nicht nur ein Dienstleister, sondern ein Partner im Lebenswandel. Mit ihren gesunden und leckeren Mahlzeiten war es einfach, meine Ziele zu erreichen.",
+  "testimonial_desc_5": "Ich freue mich, EcoGourmet gefunden zu haben. Ihre Diäten sind vielfältig und lecker, und Umweltschutz ist ihnen wichtig. Ich empfehle sie jedem, der gesund und bewusst essen möchte.",
+  "testimonial_desc_6": "EcoGourmet bietet nicht nur Unterstützung bei Diäten, sondern hat auch eine inspirierende Gemeinschaft. An ihren Veranstaltungen teilzunehmen ist ein echtes Erlebnis, und ich lerne immer etwas Neues über einen gesunden Lebensstil.",
+  "testimonial_title": "Was sie über uns sagen...",
+  "menu_ideas": "Menüideen für dich!",
+  "sub": "Abonnieren",
+  "Menu_title_1":"Menü Kreative Innovationen",
+  "Menu_text_1":"Begib dich auf eine kulinarische Reise mit unserem neuesten Menü, wo raffinierte Aromen und frische Zutaten zusammenkommen, um ein bezauberndes gastronomisches Erlebnis zu schaffen. Unser Koch kreiert jedes Gericht sorgfältig mit den feinsten lokalen und saisonalen Zutaten, um Ihren Gaumen und den Ihrer Gäste zu verwöhnen. Abonnieren Sie unsere Updates und erleben Sie die Bequemlichkeit, unsere frischesten Rezepte täglich zu erhalten, und ersparen Sie sich den Aufwand umfangreicher Küchenplanung."
 
 }
