--- a/lang/en.json
+++ b/lang/en.json
@@ -74,5 +74,30 @@
   "about_title_3": "Achieve Together!",
   "about_text_3": "EcoGourmet is an exceptional venture dedicated to a healthy lifestyle and environmental protection. Their business philosophy combines ecology and gastronomy to provide guidance to their customers toward optimal body weight while caring for the environment sustainably.",
   "plans": "*After subscribing, you will receive numerous healthy recipes daily for every meal, allowing you to make decisions effortlessly and eat variably without compromising your health.",
-  "news": "Latest News"
+  "news": "Latest News",
+  "plan_desc_1": "The Simple level plan allows for optional ordering of breakfast, lunch, or dinner. Ideal for shorter-term, more sophisticated experiences for you!",
+  "plan_desc_2": "The Pro plan offers two selectable meals in the form of breakfast, lunch, or dinner. Due to the longer duration, it is ideal for food subscription enthusiasts.",
+  "plan_desc_3": "The Enterprise plan is born in the spirit of luxury and variety. It offers three meals every day in the form of breakfast, lunch, and dinner.",
+  "abut_pricing_title": "Predefined Options for Accessing Content",
+  "award_title_1": "Sustainable Restaurant Award",
+  "award_title_2": "Green Kitchen Recognition",
+  "award_title_3": "EcoGourmet Environmental Hero",
+  "award_title_4": "Organic Restaurant Certification",
+  "award_title_5": "Sustainable Gastronomic Innovation Award",
+  "award_text_1": "EcoGourmet restaurant has won the Sustainable Restaurant Award for its environmentally friendly practices.",
+  "award_text_2": "The Green Kitchen organization awarded EcoGourmet's kitchen for the use of sustainable ingredients and processes.",
+  "award_text_3": "The EcoGourmet team is recognized for their environmental efforts and positive impact on the surroundings.",
+  "award_text_4": "EcoGourmet's restaurant has received the Organic Restaurant certification for the use of organic ingredients.",
+  "award_text_5": "EcoGourmet has been awarded the Innovation Prize for their new, sustainable gastronomic solutions.",
+  "testimonial_desc_1": "With EcoGourmet's help, I managed to find the perfect balance between a healthy lifestyle and delicious dining. The personalized advice and diets they offer helped improve my eating habits, and now I feel better.",
+  "testimonial_desc_2": "I am very grateful for EcoGourmet's services. I received excellent quality diets from them, reflecting their eco-friendly approach. For me, this company is synonymous with conscious and healthy eating.",
+  "testimonial_desc_3": "Their diet and eco-conscious mindset are truly special. I am extremely satisfied with the time spent with them, and I recommend them to anyone who wants to better understand healthy eating.",
+  "testimonial_desc_4": "EcoGourmet is not just a service provider for me but a partner in lifestyle change. Achieving my goals was easy with their healthy and delicious meals.",
+  "testimonial_desc_5": "I am delighted to have found EcoGourmet. Their diets are diverse and tasty, and environmental protection is important to them. I recommend them to everyone who wants to eat healthily and consciously.",
+  "testimonial_desc_6": "EcoGourmet not only provides assistance in diets but also has an inspiring community. Attending their events is a real experience, and I always learn something new about a healthy lifestyle.",
+  "testimonial_title": "What They Say About Us...",
+  "menu_ideas": "Menu Ideas for You!",
+  "sub": "Subscribe",
+  "Menu_title_1":"Menu Creative Innovations",
+  "Menu_text_1":"Embark on a culinary journey with our latest menu, where sophisticated flavors and fresh ingredients converge to create an enchanting gastronomic experience. Our chef meticulously crafts each dish using the finest local and seasonal ingredients to delight your palate and that of your guests. Subscribe to our updates and experience the convenience of receiving our freshest recipes daily, saving you from the hassle of extensive kitchen planning."
 }
