--- a/lang/hu.json
+++ b/lang/hu.json
@@ -46,7 +46,7 @@
   "change_email": "email cím megváltoztatása",
   "change_password": "jelszó módosítása",
   "under_construction": "fejlesztés alatt",
-  "about": "rólunk",
+  "about": "Rólunk",
   "slide_title_1": "Tudtad, hogy az EcoGourmet segíthet a bolygónk megóvásában?",
   "slide_content_1": "Az EcoGourmet olyan ételélményeket kínál, amelyek segítenek csökkenteni az ökológiai lábnyomodat. Ízletes és fenntartható ételek, amelyek segítenek megóvni a környezetet.",
   "slide_title_2": "Fedezd fel az EcoGourmet világát: Ízletes, Fenntartható, Egészséges!",
@@ -74,6 +74,31 @@
   "about_title_3": "Együtt elérjük!",
   "about_text_3": "Az EcoGourmet egy kivételes vállalkozás, amely elkötelezett az egészséges életmód és a környezetvédelem iránt. Cégfilozófiájuk az ökológia és a gasztronómia harmonikus egyesítése, hogy ügyfeleiknek az optimális testsúlyhoz vezető útmutatást nyújtsák, miközben fenntartható módon gondoskodnak a környezetről.",
   "plans":"*Feliratkozás után napi számos egészséges receptet kapsz minden étkezéshez, hogy könnyedén döntést hozhass, és változatosan étkezhess anélkül, hogy az egészséged rovására menne.",
-  "news": "Legfrissebb Híreink"
+  "news": "Legfrissebb Híreink",
+  "plan_desc_1": "A Simple szintű terv lehetővé teszi a választható reggeli, ebéd vagy vacsora rendelését. Ideális rövidebb idejű, kifinomultabb élményekhez nektek, neked!",
+  "plan_desc_2": "A Pro terv két választható étkezést kínál reggeli, ebéd vagy vacsora formájában. A hosszabb időtartam miatt ideális az élelmiszer előfizetés kedvelőinek.",
+  "plan_desc_3": "Az Enterprise terv a luxus és változatosság jegyében született. Minden nap három étkezés kínál, reggeli, ebéd és vacsora formájában.",
+  "abut_pricing_title": "Előre meghatározott opciók a tartalomhoz való hozzáféréshez",
+  "award_title_1": "Fenntartható Étterem Díj",
+  "award_title_2": "Zöld Konyha Elismerés",
+  "award_title_3": "EcoGourmet Környezetvédelmi Hős",
+  "award_title_4": "Bio Étterem Minősítés",
+  "award_title_5": "Fenntartható Gasztronómiai Innováció Díj",
+  "award_text_1": "Az EcoGourmet étterem elnyerte a Fenntartható Éttermiség Díjat környezetbarát gyakorlataiért.",
+  "award_text_2": "A Zöld Konyha szervezet kitüntette az EcoGourmet konyháját a fenntartható alapanyagok és folyamatok alkalmazásáért.",
+  "award_text_3": "Az EcoGourmet csapatát a környezetvédelmi erőfeszítéseikért és pozitív hatásukért a környezetre.",
+  "award_text_4": "Az EcoGourmet étterme megkapta a Bio Étterem minősítést a bio alapanyagok használata miatt.",
+  "award_text_5": "Az EcoGourmet új, fenntartható gasztronómiai megoldásaiért elnyerte az Innováció Díjat.",
+  "testimonial_desc_1": "Az EcoGourmet segítségével sikerült megtalálnom az egészséges életmód és a finom étkezés tökéletes egyensúlyát. Az általuk kínált személyre szabott tanácsok és étrendek segítettek javítani az étkezési szokásaimon, és most jobban érzem magam.",
+  "testimonial_desc_2": "Nagyon hálás vagyok az EcoGourmet szolgáltatásainak. Kiváló minőségű, étrendeket kaptam tőlük, amelyek a környezetbarát szemléletüket is tükrözik. Számomra ez a cég a tudatos és egészséges táplálkozás szinonimája.",
+  "testimonial_desc_3": "Az étrendjük és a környezettudatos szemléletmódjuk valóban különleges. Rendkívül elégedett vagyok a velük töltött idővel, és mindenkinek ajánlom, aki jobban szeretné megérteni az egészséges étkezést.",
+  "testimonial_desc_4": "Az EcoGourmet számomra nemcsak egy szolgáltató, hanem egy életmódváltást segítő partner. Az egészséges és ízletes ételeikkel könnyű volt számomra elérni a kitűzött céljaimat.",
+  "testimonial_desc_5": "Nagyon örülök, hogy rátaláltam az EcoGourmetra. Az étrendjeik változatosak és finomak, ráadásul a környezetvédelem is fontos számukra. Mindenkinek ajánlom, aki szeretne egészségesen és tudatosan táplálkozni.",
+  "testimonial_desc_6": "Az EcoGourmet nemcsak az étrendek terén nyújt segítséget, hanem inspiráló közösségük is van. A közös eseményeiken részt venni igazi élmény, és mindig tanulok valami újat az egészséges életmódról.",
+  "testimonial_title": "Mit mondanak rólunk...",
+  "menu_ideas": "Menü ötletek nektek!",
+  "sub": "Feliratkozás",
+  "Menu_title_1":"Menü Kreatív Újdonságokkal",
+  "Menu_text_1":"Indulj el egy gasztronómiai utazáson éttermünk legújabb, kifinomult ízekkel és friss alapanyagokkal gazdagított menüjével. Séfünk lelkiismeretes munkával készíti el minden fogást, a legfinomabb helyi és szezonális alapanyagok felhasználásával, hogy elvarázsolja az Ön és vendégei ízlelőbimbóit. Iratkozz fel frissítéseinkre, és élvezd a friss receptek mindennapos kényelmét, miközben megspórolod a konyhai tervezés terhét."
 
 }
